--- a/Public/assets/css/uploads.css
+++ b/Public/assets/css/uploads.css
@@ -8,6 +8,9 @@
   font-family: "Poppins", sans-serif;
 } */
 
+body{
+  background-color: #fcfcfc
+}
 .containers {
   height: 100vh;
   width: 100%;
